Fix for horizontal alignment

--- a/EliteCountdown/Style.css
+++ b/EliteCountdown/Style.css
@@ -23,6 +23,7 @@ html{
 video{
 	position:absolute;
 	top:50%;
+	left:50%;
 	overflow-y:hidden;
 }
 #ETA-Container{
